--- a/src/standard/s3-static-website.yaml
+++ b/src/standard/s3-static-website.yaml
@@ -79,7 +79,7 @@ Outputs:
     Value:
       Fn::Select:
         - 0
-        - Fn::Split: [".", !GetAtt StaticWebsiteBucket.DomainName]
+        - Fn::Split: [".amazonaws.com", !GetAtt StaticWebsiteBucket.DomainName]
     Description: Name of S3 bucket to hold static website content
     Export:
       Name:
