--- a/src/standard/route53-dns.yaml
+++ b/src/standard/route53-dns.yaml
@@ -34,7 +34,7 @@ Resources:
         DNSName: !Ref S3WebsiteEndpoint
 
 Outputs:
-  WebsiteURL:
+  NameServers:
     Value:
       Fn::Join:
         - ","
