enable ACL to logging bucket

--- a/src/standard/s3-static-website.yaml
+++ b/src/standard/s3-static-website.yaml
@@ -52,6 +52,8 @@ Resources:
 
   MyLoggingBucket:
     Type: AWS::S3::Bucket
+    Properties:
+      AccessControl: BucketOwnerFullControl
 
   MyCFDistribution:
     Type: "AWS::CloudFront::Distribution"
