update acl s3 logging bucket

--- a/src/standard/s3-static-website.yaml
+++ b/src/standard/s3-static-website.yaml
@@ -53,7 +53,9 @@ Resources:
   MyLoggingBucket:
     Type: AWS::S3::Bucket
     Properties:
-      AccessControl: BucketOwnerFullControl
+      OwnershipControls:
+        Rules:
+          - ObjectOwnership: BucketOwnerPreferred
 
   MyCFDistribution:
     Type: "AWS::CloudFront::Distribution"
